# ProcessInstaDump

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
instagramdumpconverter/: __main__.py  app.py
shared/: post_contract.json
tests/: test_doctor_json.py  test_loaders.py  test_post_contract_sync.py  test_render_snapshots.py  test_webapp_smoke.py
tests/fixtures/legacy/: media.json
tests/fixtures/modern/your_instagram_activity/media/: posts_1.json
tests/snapshots/: render_signatures.json
webapp/: app.js  export-from-instagram.html  index.html  privacy.html  template.html
webapp/assets/: blog.css
webapp/assets/themes/: classic.css  memory-book.css
webtemplate/themes/: minimal.css
