[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagramdumpconverter"
version = "0.1.0"
description = "Convert Instagram export dumps into browsable HTML timelines."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ProcessInstaDump contributors" }]
keywords = ["instagram", "export", "timeline", "html"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
instagramdumpconverter = "instagramdumpconverter.__main__:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["instagramdumpconverter*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
